[package]
name = "journeystreetmap-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
fastanvil = "0.31.0"
fastnbt = "2.5.0"
tiny-skia = "0.11.4"
fltk = "1.5.6"
egui = "0.31"
eframe = { version = "0.31", features = ["wgpu"] }
egui-macroquad = "0.15.0"
macroquad = "0.3.26"


[lib]
name = "journeystreetmap"
path = "src/lib.rs"

[[bin]]
name = "journeystreetmap-editor"
path = "src/main.rs"

