[package]
name = "journeystreetmap-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44", default-features = false, features = ["fs", "rt", "rt-multi-thread"] }
fastanvil = { git = "https://github.com/yossy4411/fastnbt-async.git", rev = "73323c1945e9fc1139eff9d0807821b7ba364d68", version = "0.31.0" }
fastnbt = "2.5.0"
egui = "0.31"
eframe = { version = "0.31", features = ["wgpu"] }
egui-macroquad = "0.15.0"
macroquad = "0.3.26"

[lib]
name = "journeystreetmap"
path = "src/lib.rs"

[[bin]]
name = "journeystreetmap-editor"
path = "src/main.rs"

