[package]
name = "journeystreetmap-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44", default-features = false, features = ["fs", "rt", "rt-multi-thread", "sync"] }
fastanvil = { git = "https://github.com/yossy4411/fastnbt-async.git", rev = "73323c1945e9fc1139eff9d0807821b7ba364d68", version = "0.31.0" }
fastnbt = "2.5.0"

bevy_egui = { version = "0.34.0-rc", features = ["immutable_ctx"] }
bevy = "0.16.0-rc"

[lib]
name = "journeystreetmap"
path = "src/lib.rs"

[[bin]]
name = "journeystreetmap-editor"
path = "src/main.rs"

